<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        tools:context=".feature_trans.presentation.activity.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lyt_expense_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rect_shape"
            android:minHeight="150dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_expenses_heading"
                style="@style/Phoenix.TextAppearance.Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/expenses"
                app:layout_constraintEnd_toStartOf="@+id/viewAnimator3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_expenses"
                style="@style/Phoenix.TextAppearance.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_expenses_heading"
                app:layout_constraintStart_toStartOf="@+id/tv_expenses_heading"
                app:layout_constraintTop_toBottomOf="@+id/tv_expenses_heading"
                tools:text="$210" />


            <ViewAnimator
                android:id="@+id/viewAnimator3"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:background="@color/purple_200"
                app:layout_constraintBottom_toTopOf="@+id/income_expense_progress"
                app:layout_constraintEnd_toStartOf="@+id/tv_income_heading"
                app:layout_constraintStart_toEndOf="@+id/tv_expenses_heading"
                app:layout_constraintTop_toTopOf="@+id/tv_expenses_heading" />

            <TextView
                android:id="@+id/tv_income_heading"
                style="@style/Phoenix.TextAppearance.Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/income"
                app:layout_constraintEnd_toStartOf="@+id/viewAnimator4"
                app:layout_constraintStart_toEndOf="@+id/viewAnimator3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_income"
                style="@style/Phoenix.TextAppearance.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_income_heading"
                app:layout_constraintStart_toStartOf="@+id/tv_income_heading"
                app:layout_constraintTop_toBottomOf="@+id/tv_income_heading"
                tools:text="$100" />


            <ViewAnimator
                android:id="@+id/viewAnimator4"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:background="@color/purple_200"
                app:layout_constraintBottom_toTopOf="@+id/income_expense_progress"
                app:layout_constraintEnd_toStartOf="@+id/tv_balance_heading"
                app:layout_constraintStart_toEndOf="@+id/tv_income_heading"
                app:layout_constraintTop_toTopOf="@+id/tv_expenses_heading" />

            <TextView
                android:id="@+id/tv_balance_heading"
                style="@style/Phoenix.TextAppearance.Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/balance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/viewAnimator4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_balance"
                style="@style/Phoenix.TextAppearance.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_balance_heading"
                app:layout_constraintStart_toStartOf="@+id/tv_balance_heading"
                app:layout_constraintTop_toBottomOf="@+id/tv_balance_heading"
                tools:text="$110" />


            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/income_expense_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_expenses"
                app:trackCornerRadius="8dp"
                app:trackThickness="10dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="24dp"
            android:id="@+id/rv_transactions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            tools:listitem="@layout/date_wise_transaction_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lyt_expense_summary" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ic_add_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchorGravity="bottom|right|end"
            android:src="@drawable/ic_add"
            android:layout_margin="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:borderWidth="2dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:focusable="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>